--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,7 +12,7 @@
   <meta name="title" content="CadastraPet | Cadastrando e prolongando vidas" />
   <meta name="description"
     content="Cadastre seu pet e mantenha registros clinicos e de vacinação para cuidados do seu pet." />
-  <link rel="canonical" href='https://cadastrapet.co' />
+  <link rel="canonical" href='https://cadastrapet.com.br' />
   <meta name="author" content="CadastraPet | Cadastrando e prolongando vidas" />
   <meta name="robots" content="index" />
 
@@ -24,7 +24,7 @@
   <meta property="og:title" content="CadastraPet | Cadastrando e prolongando vidas" />
   <meta property="og:description"
     content="Cadastre seu pet e mantenha registros clinicos e de vacinação para cuidados do seu pet." />
-  <meta property="og:url" content=https://cadastrapet.co />
+  <meta property="og:url" content=https://cadastrapet.com.br />
   <meta property="og:site_name" content="CadastraPet | Cadastrando e prolongando vidas" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/images/banner.png" />
@@ -32,7 +32,7 @@
   <meta name="twitter:title" content="CadastraPet | Cadastrando e prolongando vidas" />
   <meta name="twitter:description"
     content="Cadastre seu pet e mantenha registros clinicos e de vacinação para cuidados do seu pet." />
-  <meta name="twitter:url" content=https://cadastrapet.co />
+  <meta name="twitter:url" content=https://cadastrapet.com.br />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:image" content="/images/banner.png" />
   <!-- Fim SEO  -->
