--- a/web/public/index.html
+++ b/web/public/index.html
@@ -39,6 +39,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Ads: 10851601296 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10851601296"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-10851601296');
+  </script>
+
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
